<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="@dimen/settings_bnt_change_photo_width"
        android:layout_height="@dimen/settings_bnt_change_photo_height"
        android:layout_marginTop="@dimen/default_left_margin"
        android:contentDescription="@string/cd_register_image"
        android:src="@drawable/ic_pin_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <TextView
        android:id="@+id/register_send_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
        style="@style/small_text"
 />


    <EditText
        android:id="@+id/register_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLength="6"
        android:hint="@string/register_hint_default_code"
        android:textColorHint="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_send_text"
        android:autofillHints=""
        style="@style/edit_register_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>