<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_settings_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/default_left_margin"
            android:src="@drawable/ic_default_user_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/settings_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_left_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            tools:text="@string/settings_username"
            android:textColor="@color/white"
            android:textSize="@dimen/normalText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@+id/settings_user_photo">

        </TextView>

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_left_margin"
            tools:text="@string/settings_status"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/settings_fullname">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_marginTop="@dimen/normal_top_margin"
        android:text="@string/settings_text_account"
        android:textColor="@color/black"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/header_settings_block"></TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number"
        style="@style/settings_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_account">

        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/normal_text"
            tools:text="@string/settings_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_number"></TextView>

        <TextView
            android:id="@+id/settings_label_phone_number"
            style="@style/small_text"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"></TextView>

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_label_phone_number">

        </View>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_user_name"
        style="@style/settings_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_number">

        <TextView
            android:id="@+id/settings_user_name"
            style="@style/normal_text"
            tools:text="@string/settings_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_user_name"></TextView>

        <TextView
            android:id="@+id/settings_label_user_name"
            style="@style/small_text"
            android:text="@string/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_name"></TextView>

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_label_user_name">

        </View>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_about_me"
        style="@style/settings_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_user_name">

        <TextView
            android:id="@+id/settings_about_me"
            style="@style/normal_text"
            tools:text="@string/settings_about_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_about_me"></TextView>

        <TextView
            android:id="@+id/settings_label_about_me"
            style="@style/small_text"
            android:text="@string/settings_label_about_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_about_me"></TextView>

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_label_about_me">

        </View>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_bnt_change_photo_height"
        android:layout_height="@dimen/settings_bnt_change_photo_width"
        android:layout_marginEnd="@dimen/default_left_margin"
        android:src="@drawable/ic_change_photo"
        app:layout_constraintBottom_toBottomOf="@+id/header_settings_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_settings_block"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>